--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>study</title>
     <link rel="stylesheet" href="static/base.css">
+    <link rel="stylesheet" href="static/animate.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_536204_8fycvv2ken2n8kt9.css">
   </head>
   <body>
     <div id="app"></div>
